--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -82,7 +82,7 @@ jobs:
   - task: PublishBuildArtifacts@1
     displayName: 'Publish Artifact: drop'
    
-  condition: false
+  condition: true
 
 - job: Linux
   pool:
@@ -116,7 +116,7 @@ jobs:
   - task: PublishBuildArtifacts@1
     displayName: 'Publish Artifact: drop'
   
-  condition: false
+  condition: true
 
 - job: macOS
   pool:
@@ -128,17 +128,17 @@ jobs:
   steps:
   - script: echo hello from macOS
 
-  condition: false
+  condition: true
 - job: Deploy
   pool:
     vmImage: 'win1803'
   steps:
   - checkout: none #skip checking out the default repository resource
-  #- task: DownloadBuildArtifacts@0
-  #  displayName: 'Download Build Artifacts'
-  #  inputs:
-  #    artifactName: drop
-  #    downloadPath: $(Build.ArtifactStagingDirectory)
+  - task: DownloadBuildArtifacts@0
+    displayName: 'Download Build Artifacts'
+    inputs:
+      artifactName: drop
+     downloadPath: $(Build.ArtifactStagingDirectory)
 
   - script: |
         echo hello from deploy
@@ -158,7 +158,7 @@ jobs:
       isPreRelease: false 
       tagSource: 'manual'
 
-  #dependsOn: 
-  #- Windows
-  #- Linux
-  #condition: succeeded()
+  dependsOn: 
+  - Windows
+  - Linux
+  condition: succeeded()
