--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,8 @@ variables:
     month: $(Date:MM)
     day: $(Date:dd)
     uk: $(Date:yyyyMMdd)
-    justDebugTesting: 0
+    #justDebugTesting: 0
+    justDebugTesting: false
 
 name: $(TeamProject)_$(BuildDefinitionName)_$(SourceBranchName)_$(Date:yyyyMMdd)$(Rev:.r)
 
@@ -54,7 +55,8 @@ jobs:
 - job: TestMyProps
 
   dependsOn: SetProps
-  condition: eq(variables['justDebugTesting'],1)
+  #condition: eq(variables['justDebugTesting'],1)
+  condition: variables['justDebugTesting']
 
   pool:
     vmImage: 'vs2017-win2016'
