--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -95,11 +95,11 @@ jobs:
         dotnet-property "Stankinsv2/**/Stankins*.csproj" Version:"%MyVersion%"
     displayName: 'versioning'
 
-  #- task: NuGetToolInstaller@0
+  - task: NuGetToolInstaller@0
 
-  #- task: NuGetCommand@2
-  #  inputs:
-  #      restoreSolution: '$(solution)'
+  - task: NuGetCommand@2
+    inputs:
+        restoreSolution: '$(solution)'
   
   - task: VSBuild@1
     inputs:
