trying to setup version on linux too

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,8 +12,8 @@ variables:
     month: $(Date:MM)
     day: $(Date:dd)
     uk: $(Date:yyyyMMdd)
-    deployWindows: 1
-    deployLinux: 0
+    deployWindows: 0
+    deployLinux: 1
 
 name: $(TeamProject)_$(BuildDefinitionName)_$(SourceBranchName)_$(Date:yyyyMMdd)$(Rev:.r)
 
@@ -126,10 +126,10 @@ jobs:
   condition: eq(variables['deployLinux'],1)
   pool:
     vmImage: 'ubuntu-16.04'
-    variables:
-        solution: '**/StankinsV2.sln'
-        buildPlatform: 'Any CPU'
-        buildConfiguration: 'Release'
+
+  variables:
+    MyVersion: $[ dependencies.SetProps.outputs['setvarStep.PWversion'] ]  # map in the variable
+ 
   steps:
   - script: |
         echo hello from Linux
@@ -140,7 +140,9 @@ jobs:
   - script: |
        cd stankinsv2/solution/
        echo $MY_PASSWORD_DOCKER| docker login --username ignatandrei --password-stdin
-       docker build . -t stankins_linux -f Dockerfile_linux      
+       echo version1 : $MyVersion
+       echo version2 : $(MyVersion)
+       docker build . --build-arg version=$MyVersion -t stankins_linux -f Dockerfile_linux      
        docker image ls
        docker tag stankins_linux ignatandrei/stankins_linux
        docker push ignatandrei/stankins_linux
