--- a/stankinsv2/solution/Dockerfile_linux
+++ b/stankinsv2/solution/Dockerfile_linux
@@ -1,22 +1,19 @@
 FROM microsoft/dotnet:2.1-sdk-alpine AS build-env
+ARG version
 WORKDIR /app
 
 # copy csproj and restore as distinct layers
 COPY . ./
-RUN dotnet publish -c Release -r linux-x64 -o out StankinsV2/StankinsStatusWeb/StankinsAliveMonitor.csproj 
+RUN dotnet tool install  -g dotnet-property   
+RUN dotnet tool list -g
+RUN /root/.dotnet/tools/dotnet-property "Stankinsv2/**/Stankins*.csproj" Version:"$version"
+#RUN dotnet publish -c Release -r linux-x64 -o out StankinsV2/StankinsStatusWeb/StankinsAliveMonitor.csproj 
 
 # build runtime image
-FROM microsoft/dotnet:2.1-runtime-deps
-WORKDIR /app
-COPY --from=build-env /app/StankinsV2/StankinsStatusWeb/out ./
-ENV ASPNETCORE_URLS=http://+:5000
-EXPOSE 5000/tcp
-ENTRYPOINT ["./StankinsAliveMonitor"]
-
-#FROM microsoft/dotnet:aspnetcore-runtime
-#FROM microsoft/dotnet:2.1-runtime-deps-alpine
-#WORKDIR /root/  
-#COPY linux-x64 .
+#FROM microsoft/dotnet:2.1-runtime-deps
+#WORKDIR /app
+#COPY --from=build-env /app/StankinsV2/StankinsStatusWeb/out ./
 #ENV ASPNETCORE_URLS=http://+:5000
 #EXPOSE 5000/tcp
-#CMD ["StankinsAliveMonitor"]  
+#ENTRYPOINT ["./StankinsAliveMonitor"]
+
