--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ variables:
     month: $(Date:MM)
     day: $(Date:dd)
     uk: $(Date:yyyyMMdd)
-    deployWindows: 0
+    deployWindows: 1
     deployLinux: 0
 
 name: $(TeamProject)_$(BuildDefinitionName)_$(SourceBranchName)_$(Date:yyyyMMdd)$(Rev:.r)
@@ -120,7 +120,23 @@ jobs:
  
   steps:
   - checkout: none #skip checking out the default repository resource
+  - task: DownloadBuildArtifacts@0
+    displayName: 'Download Build Artifacts'
+    inputs:
+      artifactName: drop
+      downloadPath: $(Build.SourcesDirectory)
+      #downloadPath: $(Agent.BuildDirectory)
+
+  - task: ExtractFiles@1
+    displayName: 'Download Build Artifacts'
+    inputs:
+        archiveFilePatterns: '**\*.zip' 
+        destinationFolder: $(Build.SourcesDirectory)
+        cleanDestinationFolder: true 
+
+
   - script: |
+       dir
        cd stankinsv2/solution/
     displayName: 'cd to folder'
 
