--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -122,10 +122,15 @@ jobs:
       downloadPath: $(Build.SourcesDirectory)
       #downloadPath: $(Agent.BuildDirectory)
 
+  - script: |
+       dir
+       copy drop\files-$(Build.BuildId).zip files-$(Build.BuildId).zip 
+    displayName: 'moving file artifact'
+
   - task: ExtractFiles@1
-    displayName: 'Download Build Artifacts'
+    displayName: 'Extract zip files'
     inputs:
-        archiveFilePatterns: '**\*.zip' 
+        archiveFilePatterns: '*.zip' 
         destinationFolder: $(Build.SourcesDirectory)
         cleanDestinationFolder: false 
 
