add frontend job

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,8 +12,8 @@ variables:
     month: $(Date:MM)
     day: $(Date:dd)
     uk: $(Date:yyyyMMdd)
-    deployWindows: 1
-    deployLinux: 1
+    deployWindows: 0
+    deployLinux: 0
 
 name: $(TeamProject)_$(BuildDefinitionName)_$(SourceBranchName)_$(Date:yyyyMMdd)$(Rev:.r)
 
@@ -101,6 +101,34 @@ jobs:
 
     - task: PublishBuildArtifacts@1
       displayName: Publish files as Artifact
+
+- job: FrontEnd
+  dependsOn: 
+  - SetProps
+  - DownloadFiles
+  pool:
+    vmImage: 'vs2017-win2016'
+
+  steps:
+  - checkout: none #skip checking out the default repository resource
+  - task: DownloadBuildArtifacts@0
+    displayName: 'Download Build Artifacts'
+    inputs:
+      artifactName: drop
+      downloadPath: $(Build.SourcesDirectory)
+      #downloadPath: $(Agent.BuildDirectory)
+
+  - script: |
+       dir
+       move drop\files-$(Build.BuildId).zip files-$(Build.BuildId).zip 
+    displayName: 'moving file artifact'
+
+  - task: ExtractFiles@1
+    displayName: 'Extract zip files'
+    inputs:
+        archiveFilePatterns: '*.zip' 
+        destinationFolder: $(Build.SourcesDirectory)
+        cleanDestinationFolder: false 
 
 - job: Windows
   dependsOn: 
