--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -130,6 +130,15 @@ jobs:
         destinationFolder: $(Build.SourcesDirectory)
         cleanDestinationFolder: false 
 
+  - script: |
+       dir
+       cd stankinsv2\solution\StankinsV2\StankinsAliveAngular
+       npm i
+    displayName: 'moving file artifact'
+
+
+
+
 - job: Windows
   dependsOn: 
   - SetProps
