--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -133,8 +133,11 @@ jobs:
   - script: |
        dir
        cd stankinsv2\solution\StankinsV2\StankinsAliveAngular
+       echo before npm
        npm i
+       echo before build
        build.bat 
+       echo finish
     displayName: 'moving file artifact'
 
 
