--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -134,11 +134,11 @@ jobs:
        dir
        cd stankinsv2\solution\StankinsV2\StankinsAliveAngular
        echo before npm
-       npm i
+       call npm i
        echo before build
        build.bat 
        echo finish
-    displayName: 'moving file artifact'
+    displayName: 'npm and angular'
 
 
 
