--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -133,6 +133,8 @@ jobs:
   - script: |
        dir
        cd stankinsv2\solution\StankinsV2\StankinsAliveAngular
+       echo before install angular
+       npm install -g @angular/cli
        echo before npm
        call npm i
        echo before build
